option java_outer_classname = "CheckStatus";
option java_package = "com.omniti.reconnoiter";


message Metric
{
  required string name = 1;
  required int32 metricType = 2;
  optional double valueDbl = 3;
  optional int64 valueI64 = 4;
  optional uint64 valueUI64 = 5;
  optional int32 valueI32 = 6;
  optional uint32 valueUI32 = 7;
  optional string valueStr = 8;
}

message Status
{
  required int32 available = 1;
  required int32 state = 2;
  required int32 duration = 3;
  required string status = 4;
}

message Metadata
{
  required string key = 1;
  required string value = 2;
}

message Bundle
{
  optional Status status = 1;
  repeated Metric metrics = 2;
  repeated Metadata metadata = 3;
  optional uint32 period = 4;
  optional uint32 timeout = 5;
}

